Changes in 2.5 release (coming soon):

         Bochs repository moved to the SVN version control !

Brief summary :

! Fully configurable CPU to emulate with a single .bochsrc option !
- 10% (ST) to 50% (SMP) CPU emulation speedup !
- Implemented support for new x86 ISA extensions, Bochs is aligned with
  latest published Intel Archicture Manual (rev 039, AVX rev 011):
     - XSAVEOPT, AVX/AVX2/FMA/F16C, BMI1/BMI2, SMEP, INVPCID
     - VMX: VMX Preemption Timer and Pause Loop Exiting VMEXIT controls
- Implemented support for AMD SSE4A/XOP/FMA4/TBM instruction sets
- Networking: introduced new networking module 'slirp'
- Harddrive: fixed buffer overflow causing Bochs crash in LBA48 mode
- VGA: Added PCI ROM support to cirrus and pcivga and moved ROM loading
       for the ISA case to the vga code (SeaBIOS now usable by Bochs)
- Sound: ported ES1370 soundcard emulation from Qemu
- Continuing configure rework, check for more removed configure and .bochsrc
  options and their replacements !
- LGPL'd VGABIOS updated to version 0.7a

Detailed change log :

- CPU
  - Now you can configure CPU to emulate using a single .bochsrc option !
    The option selects CPU configuration to emulate from pre-defined list
    of supported configurations. When this option is used, Bochs CPU emulation
    engine is automatically configured to emulate a specific real hardware CPU,
    including exact CPUID matching reference hardware. Check .bochsrc example
    or check user manual for list of supported configurations and more details.
  * It is also possible to choose the CPU to emulate from Bochs command line
    using command line interface to .bochsrc: "cpu::model <cpu_name>"
  * Query for supported CPU models using command line option: -help cpu.

  - 10% emulation speedup with handlers chaining optimization implemented. The
    feature is enabled by default when configure with --enable-all-optimizations
    option, to disable handlers chaining speedups configure with